# robin-hood-hashing

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  appveyor.yml  compile_commands.json  robinhood  robinhood-test
.github/ISSUE_TEMPLATE/: robin-hood-hashing-is-deprecated.md
.github/workflows/: codeql-analysis.yml
cmake/: CMakeLists.txt  config.cmake.in
doc/: BENCHMARKS.md
etc/: benchmarks.xlsx  proj.cppcheck
src/: .clang-format  CMakeLists.txt  HopScotchAdaptive.h  Makefile  MicroBenchmark.h  Pcg32.h  RobinHood2.h  RobinHood3.h  RobinHood4.h  RobinHoodInfobitsHashbits.h  RobinHoodInfobyte.h  RobinHoodInfobyteFastforward.h  RobinHoodInfobyteJumpheuristic.h  RobinHoodInfobytePair.h  RobinHoodInfobytePairNoOverflow.h  RobinHoodMapTest.cpp  XoRoShiRo128Plus.h  XorShift128Plus.h  XorShiftRng.h  XorShiftStar.h  XorShiro128Plus.h  build-here.sh  hopscotch.h  marsagliamwc99.h  rh_hash_table.hpp  robin_hood_map.h  robinhood.h  test.cpp  test_robinhood.cpp  timer.h  timing_example.cpp
src/external_cmake/: CMakeLists.txt  myproject.cpp
src/include/: CMakeLists.txt  dense_flat_map.h  robin_hood.h
src/scripts/: all.sh  build.sh  build_targets.ini  build_targets.sh  random_value.rb  test_all.sh
src/test/: CMakeLists.txt  avalanche.h  benchmark.cpp  hash_map.h  hashes.h  include_only.cpp  main.cpp  sfc64.h  test.cpp  test_api.cpp  test_assignments.cpp  test_avalanche.cpp  test_base.h  test_counters.cpp  test_demo.cpp  test_empty.cpp  test_iterators.cpp  test_overflow.cpp  test_pair.cpp  test_random_insert_erase.cpp
src/test/app/: CMakeLists.txt  Counter.cpp  Counter.h  CtorDtorVerifier.cpp  CtorDtorVerifier.h  PerformanceCounters.cpp  PerformanceCounters.h  avalanche.h  benchmark.cpp  benchmark.h  checksum.h  counter_defaults.h  doctest.h  geomean.h  nanobench.cpp  randomseed.cpp  randomseed.h  sfc64.h  streamstate.cpp  streamstate.h
src/test/app/fmt/: CMakeLists.txt  bin.h  hex.h  mup.cpp  mup.h  streamstate.cpp  streamstate.h
src/test/app/hash/: Bad.h  CMakeLists.txt  FNV1a.h  Identity.h
src/test/old/: avalanche.h  benchmark.cpp  hashes.h  include_only.cpp  sfc64.h  test_assignments.cpp  test_avalanche.cpp  test_base.h  test_counters.cpp  test_demo.cpp  test_empty.cpp  test_iterators.cpp  test_overflow.cpp  test_random_insert_erase.cpp
src/test/unit/: CMakeLists.txt  a.cpp  assignment_combinations.cpp  assignments.cpp  at.cpp  b.cpp  bench_copy_iterators.cpp  bench_distinctness.cpp  bench_find_random.cpp  bench_hash_int.cpp  bench_hash_string.cpp  bench_iterate.cpp  bench_quick_overall.cpp  bench_quick_overall_map.cpp  bench_quick_overall_set.cpp  bench_random_insert_erase.cpp  bench_swap.cpp  benchmark.h  count.cpp  count_ctor_dtor.cpp  count_ctor_dtor_1.cpp  count_find_random.cpp  count_one_emplace.cpp  count_random_insert_erase.cpp  doctest.h  example.cpp  fuzz_insert_erase.cpp  include_only.cpp  include_only.h  include_only_test.cpp  main.cpp  not_copyable.cpp  optimize_avalanche.cpp  reserve.cpp  sfc64.h  show_hash.cpp  unit_addOrFree.cpp  unit_assertNotNull.cpp  unit_assign_to_move.cpp  unit_assignment_combinations.cpp  (+59 more)
src/vs/: .gitignore  robin-hood-hashing.sln  robin-hood-hashing.vcxproj
vc/: robinhood.sln  robinhood.vcxproj  robinhood.vcxproj.filters
